# ziti-box-cli

./: Cargo.toml  README.md  rust-toolchain.toml  zitibox.bash
openapi/: Cargo.toml  README.md
openapi/src/apis/: configuration.rs
src/: api.rs  config.rs  image.rs  main.rs  secrets.rs  ssh.rs
userpatches/: README.md  config-zitibox.conf.sh  customize-image.sh
