[package]
name = "ziti_box_cli"
authors = ["Samuel Pommer", "Marcel Arnold"]
description = "A CLI utility that lets you manage your Ziti Boxes"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zitibox"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
color-eyre = "0.6.5"
comfy-table = { version = "7.2.1", features = ["custom_styling"] }
convert_case = "0.10.0"
dialoguer = "0.12.0"
dirs-next = "2.0.0"
ext4_rs = "1.3.2"
glob = "0.3.3"
gpt = "4.1.0"
hostname-validator = "1.1.1"
oo7 = { version = "0.5.0", features = ["tokio"] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls", "json"] }
russh = "0.56.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
ziti_api = { package = "ziti_edge_management_api", git = "https://github.com/gelaechter/ziti_edge_management_api.git", tag = "0.26.51" }
